force-app/main/default/objects/Case/fields/Ack_At__c.field-meta.xml
<CustomField>
<fullName>Ack_At__c</fullName>
<label>Acknowledged At</label>
<type>DateTime</type>
</CustomField>