force-app/main/default/objects/Case/fields/Ack_By__c.field-meta.xml
<CustomField>
    <fullName>Ack_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acknowledged By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Acknowledged By Records</relationshipLabel>
    <relationshipName>Ack_By</relationshipName>
    <type>Lookup</type>
</CustomField>