force-app/main/default/objects/Case/fields/Care_Journey__c.field-meta.xml
<CustomField>
    <fullName>Care_Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Journey</label>
    <referenceTo>Care_Journey__c</referenceTo>
    <relationshipLabel>Care Journey Records</relationshipLabel>
    <relationshipName>Care_Journey</relationshipName>
    <type>Lookup</type>
</CustomField>