force-app/main/default/objects/Case/fields/Caregiver_Notified__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_Notified__c</fullName>
    <label>Caregiver Notified</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>