force-app/main/default/objects/Case/fields/Safety_Escalation__c.field-meta.xml
<CustomField>
<fullName>Safety_Escalation__c</fullName>
<label>Safety Escalation</label>
<type>Checkbox</type>
<defaultValue>false</defaultValue>
</CustomField>