force-app/main/default/objects/Case/fields/Safety_Source_Text__c.field-meta.xml
<CustomField>
    <fullName>Safety_Source_Text__c</fullName>
    <label>Safety Source Text</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>