force-app/main/default/objects/Case/fields/Safety_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Safety_Trigger__c</fullName>
    <label>Safety Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check-in low sugar</fullName>
            </value>
            <value>
                <fullName>Reading outside threshold</fullName>
            </value>
            <value>
                <fullName>Message keyword</fullName>
            </value>
            <value>
                <fullName>App low-glucose alert</fullName>
            </value>
            <value>
                <fullName>Counsellor raised</fullName>
            </value>
            <value>
                <fullName>Caregiver raised</fullName>
            </value>
        </valueSetDefinition>
        <restricted>true</restricted>
    </valueSet>
</CustomField>