force-app/main/default/objects/Case/fields/Trigger_Count__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Count__c</fullName>
    <label>Trigger Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>