force-app/main/default/objects/Case/CASE_Safety_Ack_Before_Close.validationRule-meta.xml
<ValidationRule>
<fullName>CASE_Safety_Ack_Before_Close</fullName>
<active>true</active>
<errorConditionFormula>RecordType.DeveloperName = 'Clinical_Safety_Escalation' &amp;&amp; IsClosed &amp;&amp; ISBLANK(Ack_At__c)</errorConditionFormula>
<errorMessage>Acknowledge the safety case before closing it.</errorMessage>
</ValidationRule>